# connected-hackathon

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.cortex/plans/: plan_2026-07-22_1159.md  plan_2026-07-22_1308.md  plan_2026-07-22_1316.md
alembic/: env.py
alembic/versions/: 365396082de6_initial_schema.py  4c898f4c3d79_add_river_links_table_with_postgis.py  a3f0fe7b4adf_add_nrfa_station_id_and_catchment_.py  b8b9760994a7_normalise_station_types_statuses_and_.py  f66d074397c0_index_river_links_nodes_and_add_.py
data/: river_thames.geojson
docs/: guide-for-participants-summary.md  ideation.md  pre-event-briefing-summary.md
nbs/: 01-river-timeseries.ipynb  02-river-geo.ipynb  03-thames-catchments.ipynb
scripts/: create_tables.sql  create_views.sql  data_catalogue.md  export_to_snowflake.py  load_to_snowflake.sql  thames_ecosystem_notebook.ipynb  thames_ecosystem_notebook.sql
src/wxdecide/: __init__.py  geo.py
src/wxdecide/connectors/: __init__.py  catchment_boundaries.py  ea_hydrology.py  ukpn.py
src/wxdecide/database/: __init__.py  engine.py  queries.py  seed.py  seed_catchments.py  seed_rivers.py  tables.py
src/wxdecide/schemas/: __init__.py  catchment.py  ea_hydrology.py  rivers.py  ukpn.py
streamlit/: data.py  pyproject.toml  streamlit_app.py
streamlit/pages/: 1_The_Challenge.py  2_The_River.py  3_Climate_Signal.py  4_Fish_at_Risk.py
tests/: test_connectors_ea_hydrology.py  test_connectors_ukpn.py  test_database_seed.py  test_geo.py  test_schemas_ea_hydrology.py  test_schemas_ukpn.py  test_wxdecide.py
